--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 name : Windsor Food Collective
 brand : Windsor Food Collective
-description : Zenthai Shiatsu and KaHuna therapist in Brisbane
-keyword : zenthai, shiatsu, kahuna, ka huna, bodywork, massage, simon mcconnell
-url : http://www.simonmcconnell.com
+description : Food buying collective in Brisbane
+keyword : co-op, windsor food collective, nscf, northey st, northey street
+url : http://windsorfoodcollective.github.io
 email : hi@simonmcconnell.com
-github : simonmcconnell
+github : windsorfoodcollective
 author : Simon McConnell
 year : 2016
 markdown : kramdown
