updated brand and colours and nav visible

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name : Windsor Food Collective
-brand : Windsor Food Collective
+brand : wfc
 description : Food buying collective in Brisbane
 keyword : co-op, windsor food collective, nscf, northey st, northey street
 url : http://windsorfoodcollective.github.io
