swap twitter for fb in footer

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ keyword : co-op, windsor food collective, nscf, northey st, northey street
 url : http://windsorfoodcollective.github.io
 email : hi@simonmcconnell.com
 github : windsorfoodcollective
+facebook: https://www.facebook.com/groups/1201331663262963/
 author : Simon McConnell
 year : 2016
 markdown : kramdown
